# src/packing/dto/packing-filters-query.dto.ts
@@ -1,0 +1,20 @@
+import { ApiPropertyOptional } from '@nestjs/swagger';
+import { IsBooleanString, IsOptional, IsString } from 'class-validator';
+
+export class PackingFiltersQueryDto {
+  @ApiPropertyOptional({
+    description: 'Filter by category label',
+    example: 'Documents',
+  })
+  @IsOptional()
+  @IsString()
+  category?: string;
+
+  @ApiPropertyOptional({
+    description: 'Filter by packed status',
+    example: 'true',
+  })
+  @IsOptional()
+  @IsBooleanString()
+  isPacked?: string;
+}
